   - ofa_dossier_misc_get_current_dbname(): removed function.
   - ofa_dossier_misc_get_dossiers(): removed function (todo #893).
   - ofa_dossier_misc_get_exercices(): removed function.
   - ofa_dossier_misc_get_exercice_label(): removed function.
   - ofa_dossier_misc_set_current(): removed function.
   - ofa_dossier_new_run_with_parent(): new method.
   - ofa_main_window_open_dossier(): new method.
   - ofaIDBConnect: new DBMS connection management interface.
   - ofaIDBEditor: new DBMS properties management interface.
   - ofaIDBMeta: new dossier meta properties management interface.
   - ofaIDBPeriod: new exercice management interface.
   - ofaIDBProvider: new DBMS directory management interface.
   - ofaIPreferences: is renamed to ofaIPrefsProvider.
   - ofaIPrefsPage: new interface.
   - ofaMySQLConnect: new class which implements ofaIDBConnect interface.
   - ofaMySQLEditorEnter: new class which implements ofaIDBEditor interface.
   - ofaMySQLEditorDisplay: new class which implements ofaIDBEditor interface.
   - ofaMySQLIPreferences: is renamed to ofaMySQLIPrefsProvider.
   - ofaMySQLPrefsBin: implements ofaIPrefsPage interface.
   - ofaMySQLPeriod: new class which implements ofaIFilePeriod interface.
   - ofaMySQLMeta: new class which implements ofaIFileMeta interface.
   - ofaFileDir: new class for dossiers collection management.
   - myFileMonitor: new class.
   - mySettings: new class which implements myISettings.
   - ofa-entry-columns.{c,h}: removed obsolete files.
   - ofa-reconcil-columns.{c,h}: removed obsolete files.
   - ofaIColumns: removed obsolete interface.
   - ofaITreeviewColumn: new interface.
   - ofaITreeviewDisplay: new interface.
   - ofaReconciliation class is renamed to ofaReconcilPage.
   - ofaSettings:
     - minimize use in MySQL plugin (todo #932).
     - remove ofa_settings_dossier_xxx methods (todo #931).
     - use mySettings class (todo #888).
   - Add ofa- prefix to LastBackupFolder key (todo #929).